fix: resolve flex layout issues

--- a/src/_assets/css/_includes/grid.scss
+++ b/src/_assets/css/_includes/grid.scss
@@ -15,25 +15,32 @@
   max-width: 1000px;
 }
 
-@include media-breakpoint-up(md) {
-  html,
-  body {
-    height: 100%;
-  }
+html,
+body {
+  height: 100%;
+}
 
-  .overflow-md-scroll {
-    overflow: scroll;
-  }
+.main-scroll {
+  overflow: scroll;
+}
 
-  .document-wrapper {
+.document-wrapper {
+  display: flex;
+  min-height: 100%;
+  flex-direction: column;
+
+  > main {
     display: flex;
-    max-height: 100%;
+    flex-direction: column;
+    flex: 1 1 auto;
+    min-width: 0;
+  }
+}
 
-    > main {
-      flex-direction: column;
-      flex: 1 1 auto;
-      min-width: 0;
-    }
+@include media-breakpoint-up(md) {
+  .document-wrapper {
+    flex-direction: row;
+    max-height: 100%;
   }
 
   .sidebar {
